--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^17.3.1",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
+    "mssql": "^12.2.0",
     "mysql2": "^3.17.2"
   }
 }
