--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "js": "^0.1.0",
     "jsonwebtoken": "^9.0.3",
     "mssql": "^12.2.0",
-    "mysql2": "^3.17.2"
+    "mysql2": "^3.17.2",
+    "recharts": "^3.7.0"
   }
 }
